// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Text default 1`] = `
<div
  class="css-text-1rynq56"
  dir="auto"
/>
`;

exports[`components/Text nested 1`] = `
<div
  class="css-text-1rynq56"
  dir="auto"
>
  <span
    class="css-textHasAncestor-1qaijid"
    data-testid="child"
  />
</div>
`;

exports[`components/Text prop "accessibilityLabel" value is set 1`] = `
<div
  aria-label="accessibility label"
  class="css-text-1rynq56"
  dir="auto"
/>
`;

exports[`components/Text prop "accessibilityLabelledBy" value is set 1`] = `
<div
  aria-labelledby="123"
  class="css-text-1rynq56"
  dir="auto"
/>
`;

exports[`components/Text prop "accessibilityLiveRegion" value is set 1`] = `
<div
  aria-live="polite"
  class="css-text-1rynq56"
  dir="auto"
/>
`;

exports[`components/Text prop "accessibilityRole" value alters HTML element 1`] = `
<article
  class="css-text-1rynq56"
  dir="auto"
  role="article"
/>
`;

exports[`components/Text prop "accessibilityRole" value is "button" 1`] = `
<div
  class="css-text-1rynq56"
  dir="auto"
  role="button"
  tabindex="0"
/>
`;

exports[`components/Text prop "accessibilityRole" value is set 1`] = `
<div
  class="css-text-1rynq56"
  dir="auto"
  role="presentation"
/>
`;

exports[`components/Text prop "dir" value is "ltr" 1`] = `
<div
  class="css-text-1rynq56"
  dir="ltr"
/>
`;

exports[`components/Text prop "dir" value is "rtl" 1`] = `
<div
  class="css-text-1rynq56"
  dir="rtl"
/>
`;

exports[`components/Text prop "href" href with accessibilityRole 1`] = `
<a
  class="css-text-1rynq56"
  dir="auto"
  href="https://example.com"
  role="presentation"
/>
`;

exports[`components/Text prop "href" value is set 1`] = `
<a
  class="css-text-1rynq56"
  dir="auto"
  href="https://example.com"
/>
`;

exports[`components/Text prop "hrefAttrs" null values are excluded 1`] = `
<a
  class="css-text-1rynq56"
  dir="auto"
  href="https://example.com"
/>
`;

exports[`components/Text prop "hrefAttrs" requires "href" 1`] = `
<div
  class="css-text-1rynq56"
  dir="auto"
/>
`;

exports[`components/Text prop "hrefAttrs" target variant is set 1`] = `
<a
  class="css-text-1rynq56"
  dir="auto"
  href="https://example.com"
  target="_blank"
/>
`;

exports[`components/Text prop "hrefAttrs" value is set 1`] = `
<a
  class="css-text-1rynq56"
  dir="auto"
  download="filename.jpg"
  href="https://example.com"
  rel="nofollow"
  target="_blank"
/>
`;

exports[`components/Text prop "lang" ar 1`] = `
<div
  class="css-text-1rynq56"
  dir="rtl"
  lang="ar"
/>
`;

exports[`components/Text prop "lang" fr 1`] = `
<div
  class="css-text-1rynq56"
  dir="ltr"
  lang="fr"
/>
`;

exports[`components/Text prop "lang" undefined 1`] = `
<div
  class="css-text-1rynq56"
  dir="auto"
/>
`;

exports[`components/Text prop "lang" with dir 1`] = `
<div
  class="css-text-1rynq56"
  dir="ltr"
  lang="ar"
/>
`;

exports[`components/Text prop "nativeID" value is set 1`] = `
<div
  class="css-text-1rynq56"
  dir="auto"
  id="nativeID"
/>
`;

exports[`components/Text prop "numberOfLines" value is set 1`] = `
<div
  class="css-text-1rynq56 r-WebkitBoxOrient-8akbws r-display-krxsd3 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01"
  dir="auto"
/>
`;

exports[`components/Text prop "numberOfLines" value is set to one 1`] = `
<div
  class="css-text-1rynq56 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a"
  dir="auto"
/>
`;

exports[`components/Text prop "selectable" value of false 1`] = `
<div
  class="css-text-1rynq56 r-userSelect-lrvibr"
  dir="auto"
/>
`;

exports[`components/Text prop "selectable" value of true 1`] = `
<div
  class="css-text-1rynq56 r-userSelect-1xnzce8"
  dir="auto"
/>
`;

exports[`components/Text prop "style" value is set 1`] = `
<div
  class="css-text-1rynq56"
  dir="auto"
  style="border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px;"
/>
`;

exports[`components/Text prop "testID" value is set 1`] = `
<div
  class="css-text-1rynq56"
  data-testid="123"
  dir="auto"
/>
`;
